alexis-giromagny/archives/ticketin/k8s/backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: ticketin
spec:
  parentRefs:
    - name: tp-gateway
  hostnames:
    - "api.ticket-in.fr"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 80
